# polyglot-gpu

./: README.md
webgpu-cpp/: .gitignore  CMakeLists.txt  build.sh
webgpu-cpp/src/: main.cpp
webgpu-ts/: README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
webgpu-ts/src/: main.ts
